# carless-life-rehearsal

./: .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: data_quality.py  diagnosis.py  fixtures.py  rehearsals.py
backend/app/core/: __init__.py  config.py
backend/app/domain/: __init__.py  models.py
backend/app/fixtures/: __init__.py  demo.py
backend/app/services/data_quality/: __init__.py  service.py
backend/app/services/diagnosis/: __init__.py  engine.py
backend/app/services/rehearsal/: __init__.py  engine.py
backend/app/services/routing/: __init__.py  base.py  mock.py  otp.py  provider.py
backend/tests/: test_data_quality.py  test_diagnosis.py  test_health.py  test_models_and_fixtures.py  test_rehearsals.py  test_routing.py
docs/: architecture.md  audit-context-for-chatgpt.md  data-policy.md  demo-script-ja.md  demo-script-zh.md  open-data-challenge-2026-fit.md  product-blueprint.md  submission-summary-ja.md  technical-notes.md
frontend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/public/: config.js
frontend/src/: App.tsx  global.d.ts  main.tsx  styles.css  types.ts
scripts/: deploy-cloud-run.sh  git-deploy.sh  promote-and-verify.sh  release_state.py  rollback-cloud-run.sh  test_cloudbuild_config.sh  test_release_state.py
(+26 files in other folders)
